# rightrun

./: LICENSE  README.md  package-lock.json  package.json
.github/workflows/: main.yml  release.yml  tag_release.yml  version-bump.yml  webpack.yml
example/: CMakeLists.txt  Makefile  folder.link  template.sh  template.sh.link
example/example.link/: folder copy.link
example/folder copy 2/: example.sh
scripts/: package.sh
src/: duplicateTools.ts  execTools.ts  extension.ts  symlinkTools.ts  templates.ts
templates/: template.hip  template.py
